--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,3 +8,9 @@
   padding-left: 100px;
   padding-right: 100px;
 }
+
+.nav-table {position: absolute;
+width: 1443px;
+height: 103px;
+left: -3px;
+top: 0px;
