--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,7 @@
   padding-right: 100px;
 }
 
-.nav-table {position: absolute;
-width: 100%;
-height: 103px;
-left: -3px;
-top: 0px;
+.hourstable {
+  border:1px solid;
+  border-color: black;
+}
