--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,3 +13,9 @@
   border:1px solid;
   border-color: black;
 }
+/* Nav Bar */
+.nav-table {
+width: 100%;
+height: 103px;
+left: -3px;
+top: 0px;}
