--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,15 +15,18 @@
 }
 /* Nav Bar */
 .nav-table {
+position: absolute;
 width: 100%;
 height: 103px;
 left: -3px;
 top: 0px;}
 
 .right {
+position: absolute;
 right:100px;
 }
 
 .left{
+position: absolute;
 left:100px;
 }
