--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,10 +16,7 @@
 /* Nav Bar */
 .nav-table {
 position: absolute;
-width: 100%;
-height: 103px;
-left: -3px;
-top: 0px;}
+width: 100%;}
 
 .right {
 position: absolute;
