--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,10 +25,10 @@ text-align: center;}
 position: absolute;
 width: 226.49px;
 height: 79.1px;
-left: 683px;
-top: 577px;
+left: 672.2px;
+top: 566.38px;
 
-background: rgba(0, 195, 161, 0.62);
+background: #00C3A1;
 border-radius: 18px;
   
 }
