--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,3 +56,7 @@ font-weight: 400;
 font-size: 32px;
 line-height: 39px;
 color: #000000;}
+
+.nav-table, .nav-tr, .nav-td {text-decoration:"none";
+text-align: "center";  
+}
