--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ text-align: center;}
   border:2px solid black;
 }
 
-.color-block {background-color:#54D4F0;
+.color-block2 {background-color:#54D4F0;
   width:100%;
   height:150px;}
 
@@ -38,6 +38,19 @@ font-size: 32px;
 line-height: 39px;
 color: #000000;}
 
-.nav-table, .nav-tr, .nav-td {text-decoration:"none";
-text-align: "center";  
-}
+.nav-table.nav-td {text-decoration: none;
+text-align: "center";}
+  
+.color-block {
+background-color:#54D4F0;
+width:100%;
+height:150px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 300;
+font-size: 36px;
+line-height: 44px;
+display: flex;
+align-items: center;
+text-align: center;
+color: #001664;}
