--- a/stylesheet.css
+++ b/stylesheet.css
@@ -43,8 +43,11 @@ text-align: "center";}
   
 .color-block {
 background-color:#54D4F0;
-width:100%;
-height:150px;
+position: absolute;
+width: 1448px;
+height: 218px;
+left: 0px;
+top: 955px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 300;
