--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,7 +27,7 @@ text-align: center;}
   width:100%;
   height:150px;}
 
-.right {text-align: right;
+.right {text-align: right;}
 
 .right2 {text-align: right;
 
