--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,16 +27,26 @@ text-align: center;}
   width:100%;
   height:150px;}
 
-.right {text-align: right;}
+.right {text-align: right;
+position: absolute;
+width: 257px;
+height: 79px;
+left: 672px;
+top: 319px;}
 
 .right2 {text-align: right;
-
+position: absolute;
+width: 674px;
+height: 74px;
+left: 672px;
+top: 422px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 39px;
-color: #000000;}
+color: #000000;
+}
 
 .nav-table.nav-td {text-decoration: none;
 text-align: "center";}
@@ -44,8 +54,8 @@ text-align: "center";}
 .color-block {
 background-color:#54D4F0;
 position: absolute;
-width: 1448px;
-height: 218px;
+width: 100&;
+height: 150px;
 left: 0px;
 top: 955px;
 font-family: 'Inter';
