--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,7 @@ top: 0px;}
 .team-greet {
 text-align: center;}
 
-#hourstable, #hourstr, #hourstd, #hoursth {
+table, tr, td, th {
   border:2px solid black;
 }
 
