--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,7 +54,7 @@ text-align: "center";}
 .color-block {
 background-color:#54D4F0;
 position: absolute;
-width: 100&;
+width: 100px;
 height: 150px;
 left: 0px;
 top: 955px;
