--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,12 @@ top: 0px;}
 
  
 .team-greet {
-text-align: center;}
+position: absolute;
+width: 353px;
+height: 102px;
+left: 543px;
+top: 1408px;
+border: 3px solid #54D4F0;}
 
 table, tr, td, th {
   border:2px solid black;
