--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,44 +17,26 @@ top: 0px;}
 
  
 .team-greet {
-position: absolute;
-width: 353px;
-height: 102px;
-left: 543px;
-top: 1408px;
-border: 3px solid #54D4F0;}
+text-align: center;}
 
-table, tr, td, th {
+#hourstable, #hourstr, #hourstd, #hoursth {
   border:2px solid black;
 }
 
 .color-block2 {background-color:#54D4F0;
-position: absolute;
-width: 1508px;
-height: 272px;
-left: -34px;
-  top: 2428px;}
-  
-.right {text-align: right;
-position: absolute;
-width: 257px;
-height: 79px;
-left: 672px;
-top: 319px;}
+  width:100%;
+  height:150px;}
+
+.right {text-align: right;}
 
 .right2 {text-align: right;
-position: absolute;
-width: 674px;
-height: 74px;
-left: 672px;
-top: 422px;
+
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
 font-size: 32px;
 line-height: 39px;
-color: #000000;
-}
+color: #000000;}
 
 .nav-table.nav-td {text-decoration: none;
 text-align: "center";}
@@ -62,8 +44,8 @@ text-align: "center";}
 .color-block {
 background-color:#54D4F0;
 position: absolute;
-width: 100px;
-height: 150px;
+width: 1448px;
+height: 218px;
 left: 0px;
 top: 955px;
 font-family: 'Inter';
@@ -77,5 +59,7 @@ text-align: center;
 color: #001664;}
   
 .bunny {position: absolute;
+width: 400px;
+height: 400px;
 left: 118px;
-top: 100px;}
+top: 223px;}
