--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,10 +27,16 @@ text-align: center;}
   width:100%;
   height:150px;}
 
-.right {text-align: right;}
+.right {text-align: right;
+font-family: 'Barlow';
+font-style: normal;
+font-weight: 700;
+font-size: 64px;
+line-height: 77px;
+letter-spacing: 0.105em;
+color: #000000;}
 
 .right2 {text-align: right;
-
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
@@ -44,10 +50,8 @@ text-align: "center";}
 .color-block {
 background-color:#54D4F0;
 position: absolute;
-width: 1448px;
-height: 218px;
-left: 0px;
-top: 955px;
+width: 100%;
+height: 150px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 300;
@@ -59,7 +63,7 @@ text-align: center;
 color: #001664;}
   
 .bunny {position: absolute;
-width: 400px;
-height: 400px;
+width: 300px;
+height: 300px;
 left: 118px;
-top: 223px;}
+top: 200x;}
