--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,10 @@ text-align: center;}
   border:2px solid black;
 }
 
+#creditstable, #creditstr, #creditstd, #creditsth {
+  border:2px solid black;
+}
+
 .color-block2 {background-color:#54D4F0;
   width:100%;
   height:150px;}
