--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,23 +23,20 @@ text-align: center;}
 
 .color-block2 {background-color:#54D4F0;
   width:100%;
-  height:150px;}
+  height:150px;
+  top:1000;
+  }
 
 h2 {text-align: right;
 font-family: 'Barlow';
 font-style: normal;
-font-weight: 700;
-font-size: 64px;
-line-height: 77px;
-letter-spacing: 0.105em;
+font-size: 40px;
 color: #000000;}
 
 .right2 {text-align: right;
 font-family: 'Inter';
 font-style: normal;
-font-weight: 400;
-font-size: 32px;
-line-height: 39px;
+font-size: 20px;
 color: #000000;}
 
 .nav-table.nav-td {text-decoration: none;
@@ -47,15 +44,12 @@ text-align: "center";}
   
 .color-block {
 background-color:#54D4F0;
-position: absolute;
 width: 100%;
 height: 150px;
+top: 400px;
 font-family: 'Inter';
 font-style: normal;
-font-weight: 300;
 font-size: 36px;
-line-height: 44px;
-display: flex;
 align-items: center;
 text-align: center;
 color: #001664;}
