--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,3 +45,19 @@ color: #001664;}
 .bunny {
 width: 400px;
 height: 400px;}
+
+.hoursbtn{
+  color:white;
+  background-color:#00C3A1;
+  font-size:25px;  
+  text-align:center;
+  border:none;
+  border-radius:18px;
+  padding: 10px 50px;
+}
+
+.hoursbtn:hover{
+  background-color:background: rgba(0, 195, 161, 0.62);
+  -webkit-transition-duration: 200ms;
+  transition-duration: 200ms;
+}
