--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,8 +27,16 @@ text-align: center;}
   top:1500;
   }
 
-.nav-table.nav-td {text-decoration: none;
-text-align: "center";}
+.nav-table.nav-td.nav-th {text-decoration: none;
+text-align: center;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+
+color: #000000;
+}
   
 .color-block {
 background-color:#54D4F0;
