--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,9 @@ height: 400px;}
 .hoursbtn{
   color:white;
   background-color:#00C3A1;
-  font-size:20px;  
+  font-size:20px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
   text-align:center;
   border:none;
   border-radius:18px;
