--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,6 +46,7 @@ top: 400px;
 font-family: 'Inter';
 font-style: normal;
 font-size: 28px;
+padding:70px 0;
 align-items: center;
 text-align: center;
 color: #001664;}
