--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ height: 218px;
 top: 400px;
 font-family: 'Inter';
 font-style: normal;
-font-weight:300px;
+font-weight:300;
 font-size: 25px;
 line-height: 44px;
 align-items: center;
@@ -77,7 +77,7 @@ height: 400px;}
 }
 
 .hoursbtn:hover{
-  background-color:background: rgba(0, 195, 161, 0.62);
+  background-color:rgba(0, 195, 161, 0.62);
 }
 
 .creditsbtn{
@@ -88,12 +88,12 @@ height: 400px;}
   font-weight: 500;
   text-align:center;
   border:none;
-  border-radius:18px;
+  border-radius:10px;
   padding: 10px 30px;
 }
 
-.hoursbtn:hover{
-  background-color:background: rgba(0, 195, 161, 0.62);
+.creditsbtn:hover{
+  background-color:rgba(0, 195, 161, 0.62);
 }
 
 
