--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,8 +82,10 @@ height: 400px;}
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   text-align:center;
+  width: 100px;
+  height: 50px;
   border:none;
-  border-radius:18px;
+  border-radius:10px;
   padding: 10px 30px;
 }
 
