--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,7 +46,7 @@ font-size:13;}
   top:1500;
   }
 
-.nav-table.nav-td.nav-th {text-decoration: none;
+.nav-table.nav-td.nav-th {
 text-align: center;
 font-family: 'Inter';
 font-style: normal;
