--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,8 +91,7 @@ height: 400px;}
   font-family: 'Inter', sans-serif;
   font-weight: 500;
   text-align:center;
-  width: 100px;
-  height: 50px;
+  height: 25%;
   border:none;
   border-radius:10px;
   padding: 10px 30px;
