--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,9 @@ background-color:#FBFBFB;
 .nav-table 
 {width:100%}
 
+a.one:link {color:#000000}
+a.one.hover (color:#cccccc)
+
 h2 {font-family: 'Barlow';
 font-style: normal;
 font-weight: 700;
@@ -30,20 +33,21 @@ line-height: 20px;}
 text-align: center;
 font-family: 'Barlow';
 font-weight: 700;
+font-size:25px;
 }
 
 .team-td {
 font-family: 'Barlow';
 font-style: normal;
 font-weight: 500;  
-font-size:15;
+font-size:20;
 }
 
 .team-td2 {
 font-family: 'Inter';
 font-style: normal;
 font-weight: 300;
-font-size:13;
+font-size:15;
 }
 
 #hourstable, #hourstr, #hourstd, #hoursth {
@@ -67,22 +71,18 @@ font-style: normal;
 font-weight: 400;
 font-size: 24px;
 line-height: 29px;
-
 color: #000000;}
   
 .color-block {
 background-color:#54D4F0;
 width: 100%;
-height: 200px;
-top: 400px;
+height: 220px;
 font-family: 'Inter';
 font-style: normal;
 font-weight:300;
 font-size: 25px;
 padding-top: 100px;
 padding-bottom: 100px;
-vertical-align: middle;
-align-items: center;
 text-align: center;
 color: #001664;}
   
@@ -123,4 +123,5 @@ height: 400px;}
   background-color:rgba(0, 195, 161, 0.62);
 }
 
+.owl
 
