--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,10 +23,10 @@ font-style: normal;
 font-weight: 700;
 font-size: 40px;}
 
-.Path {font-family: 'Inter';
+.Path {font-family: 'Barlow';
 font-style: normal;
-font-weight:200;
-font-size: 22px;
+font-weight:700;
+font-size: 30px;
 line-height: 20px;}
  
 .team-greet {
