--- a/stylesheet.css
+++ b/stylesheet.css
@@ -21,11 +21,11 @@ a.one.hover (color:#cccccc)
 h2 {font-family: 'Barlow';
 font-style: normal;
 font-weight: 700;
-font-size: 40px;}
+font-size: 45px;}
 
 .Path {font-family: 'Barlow';
 font-style: normal;
-font-weight:700;
+font-weight:400;
 font-size: 30px;
 line-height: 20px;}
  
@@ -67,8 +67,23 @@ font-size:15;
   top:1500;
   }
 
-.nav-table.nav-td.nav-th {
-text-align: center;
+.nav-table {text-align: center;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+color: #000000;}
+
+.nav-td {text-align: center;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+color: #000000;}
+
+.nav-th {text-align: center;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
@@ -85,7 +100,8 @@ font-style: normal;
 font-weight:300;
 font-size: 25px;
 text-align: center;
-color: #001664;}
+color: #001664;
+padding:100px;}
   
 .bunny {
 width: 400px;
