--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,12 +16,12 @@ background-color:#FBFBFB;
 {width:100%}
 
 a.one:link {color:#000000}
-a.one.hover (color:#cccccc)
+a.one.hover {color:#cccccc}
 
 h2 {font-family: 'Barlow';
 font-style: normal;
 font-weight: 700;
-font-size: 45px;}
+font-size: 70px;}
 
 .Path {font-family: 'Barlow';
 font-style: normal;
@@ -101,7 +101,7 @@ font-weight:300;
 font-size: 25px;
 text-align: center;
 color: #001664;
-padding:100px;}
+padding:130px;}
   
 .bunny {
 width: 400px;
