--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ color: #000000;}
 .color-block {
 background-color:#54D4F0;
 width: 100%;
-height: 3%;
+height: 50px;
 font-family: 'Inter';
 font-style: normal;
 font-weight:300;
