--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ background-color:#FBFBFB;
   padding-right: 100px;}
 
 a.one:link {color:#000000;
-font-size: 13px;}
+font-size: 20px;}
 
 a.one.hover {color:#cccccc}
 
@@ -37,14 +37,12 @@ font-size:25px;
 
 .team-td {
 font-family: 'Barlow';
-font-style: normal;
 font-weight: 500;  
 font-size:30;
 }
 
 .team-td2 {
 font-family: 'Inter';
-font-style: normal;
 font-weight: 300;
 font-size:15;
 }
@@ -93,15 +91,14 @@ color: #000000;}
 .color-block {
 background-color:#54D4F0;
 width: 100%;
-height: 30px;
+background-size: 100% 10%;
 font-family: 'Inter';
 font-style: normal;
 font-weight:300;
 font-size: 25px;
 text-align: center;
 align-items: center;
-color: #001664;
-padding:130px;}
+color: #001664;}
   
 .bunny {
 width: 400px;
