--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ color: #000000;}
 .color-block {
 background-color:#54D4F0;
 width: 100%;
-background-size: 100% 40%;
+background-size: 100% 200px;
 font-family: 'Inter';
 font-style: normal;
 font-weight:300;
