--- a/stylesheet.css
+++ b/stylesheet.css
@@ -139,9 +139,11 @@ height: 400px;}
 }
 
 button {
+  color:#001664;
   margin-top: 20px;
   line-height: 60px;
-  font-weight: bold;
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
   padding: 0 40px;
   background: #54D4F0;
   border: none;
