--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,6 +17,17 @@ font-size: 16px;}
 
 a.one.hover {color:#cccccc}
 
+.one {
+text-align: center;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 29px;
+color: #000000;} 
+  
+}
+
 h2 {font-family: 'Barlow';
 font-style: normal;
 font-weight: 700;
