--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,16 +145,18 @@ height: 400px;}
 }
 
 button {
+  display: flex;
+  flex-direction: row;
   color:#001664;
   margin-top: 20px;
   line-height: 60px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   padding: 0 40px;
-  display:inline-block;
   background: #54D4F0;
   border: none;
   border-radius:10px;
+  
 }
 
 #colorp {
