--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,6 +145,8 @@ height: 400px;}
 }
 
 button {
+  display:flex;
+  justify-content:center;
   color:#001664;
   margin-top: 20px;
   line-height: 60px;
